Update print statement from 'Hello' to 'Goodbye'

--- a/Xodó da Preta/templates/about.html
+++ b/Xodó da Preta/templates/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Zay Shop - About Page</title>
+    <title>Xodó da Preta  - Sobre Mim</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,10 +11,10 @@
  <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='zay/assets/img/favicon.ico') }}">
 
  <!-- CSS principal -->
-<link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/bootstrap.min.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/templatemo.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/custom.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/fontawesome.min.css') }}">
+ <link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/bootstrap.min.css') }}">
+ <link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/templatemo.css') }}">
+ <link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/custom.css') }}">
+ <link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/fontawesome.min.css') }}">
 
  <!-- Google Fonts -->
  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
@@ -58,8 +58,8 @@
     <nav class="navbar navbar-expand-lg navbar-light shadow">
         <div class="container d-flex justify-content-between align-items-center">
 
-            <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
-                Zay
+            <a class="navbar-brand text-success logo h1 align-self-center" href="{{ url_for('home') }}">
+                Xodó da Preta
             </a>
 
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#templatemo_main_nav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,16 +70,16 @@
                 <div class="flex-fill">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="{{ url_for('home') }}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="{{ url_for('about') }}">Sobre mim</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="shop.html">Shop</a>
+                            <a class="nav-link" href="{{ url_for('shop') }}">Loja</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="{{ url_for('contact') }}">Contato</a>
                         </li>
                     </ul>
                 </div>
@@ -133,7 +133,7 @@
         <div class="container">
             <div class="row align-items-center py-5">
                 <div class="col-md-8 text-white">
-                    <h1>About Us</h1>
+                    <h1>Sobre Mim</h1>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -152,7 +152,7 @@
     <section class="container py-5">
         <div class="row text-center pt-5 pb-3">
             <div class="col-lg-6 m-auto">
-                <h1 class="h1">Our Services</h1>
+                <h1 class="h1">Nossos Serviços</h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     Lorem ipsum dolor sit amet.
