--- a/Xodó da Preta/templates/index.html
+++ b/Xodó da Preta/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Zay Shop - About Page</title>
+    <title>Xodó da Preta  - Home</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -58,8 +58,8 @@
     <nav class="navbar navbar-expand-lg navbar-light shadow">
         <div class="container d-flex justify-content-between align-items-center">
 
-            <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
-                Xodó da Preta
+            <a class="navbar-brand text-success logo h1 align-self-center" href="{{ url_for('home') }}">
+                Xodó da Preta 
             </a>
 
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#templatemo_main_nav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,16 +70,16 @@
                 <div class="flex-fill">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="{{ url_for('home') }}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">Sobre mim</a>
+                            <a class="nav-link" href="{{ url_for('about') }}">Sobre mim</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="shop.html">Produtos</a>
+                            <a class="nav-link" href="{{ url_for('shop') }}">Loja</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contato</a>
+                            <a class="nav-link" href="{{ url_for('contact') }}">Contato</a>
                         </li>
                     </ul>
                 </div>
@@ -212,7 +212,7 @@
     <section class="container py-5">
         <div class="row text-center pt-3">
             <div class="col-lg-6 m-auto">
-                <h1 class="h1">Categories of The Month</h1>
+                <h1 class="h1">Categorias do Mês</h1>
                 <p>
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                     deserunt mollit anim id est laborum.
