--- a/Xodó da Preta/templates/about.html
+++ b/Xodó da Preta/templates/about.html
@@ -134,10 +134,7 @@
             <div class="row align-items-center py-5">
                 <div class="col-md-8 text-white">
                     <h1>Sobre Mim</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <p>  Eu sou Teresa Cristina, cofundadora e estilista e designer de acessórios da Xodó da Preta. Neuropsicopedagoga de formação porém, sempre fui apaixonada por acessórios e sonhava criar minhas próprias roupas. 
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -402,3 +399,4 @@
 </body>
 
 </html>
+
