--- a/Xodó da Preta/templates/about.html
+++ b/Xodó da Preta/templates/about.html
@@ -151,8 +151,7 @@
             <div class="col-lg-6 m-auto">
                 <h1 class="h1">Nossos Serviços</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    Lorem ipsum dolor sit amet.
+                    Xodó da Preta é uma marca autoral e inclusiva que produz acessórios e moda afro, com o propósito de vestir todos os corpos, todos os gêneros com representatividade, identidade e versatilidade., além de transmitir alegria através das estampas e cores. Prezamos pela sustentabilidade e economia circular. Marca idealizada e criada pela minha mãe Marli.
                 </p>
             </div>
         </div>
@@ -161,7 +160,7 @@
             <div class="col-md-6 col-lg-3 pb-5">
                 <div class="h-100 py-5 services-icon-wap shadow">
                     <div class="h1 text-success text-center"><i class="fa fa-truck fa-lg"></i></div>
-                    <h2 class="h5 mt-4 text-center">Delivery Services</h2>
+                    <h2 class="h5 mt-4 text-center">Servico de Entrega</h2>
                 </div>
             </div>
 
@@ -175,14 +174,14 @@
             <div class="col-md-6 col-lg-3 pb-5">
                 <div class="h-100 py-5 services-icon-wap shadow">
                     <div class="h1 text-success text-center"><i class="fa fa-percent"></i></div>
-                    <h2 class="h5 mt-4 text-center">Promotion</h2>
+                    <h2 class="h5 mt-4 text-center"></h2>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-3 pb-5">
                 <div class="h-100 py-5 services-icon-wap shadow">
                     <div class="h1 text-success text-center"><i class="fa fa-user"></i></div>
-                    <h2 class="h5 mt-4 text-center">24 Hours Service</h2>
+                    <h2 class="h5 mt-4 text-center"> </h2>
                 </div>
             </div>
         </div>
@@ -194,10 +193,9 @@
         <div class="container my-4">
             <div class="row text-center py-3">
                 <div class="col-lg-6 m-auto">
-                    <h1 class="h1">Our Brands</h1>
+                    <h1 class="h1"> </h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        Lorem ipsum dolor sit amet.
+                    
                     </p>
                 </div>
                 <div class="col-lg-9 m-auto tempaltemo-carousel">
@@ -399,4 +397,5 @@
 </body>
 
 </html>
+
 
