alteracao do carrossel

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -147,7 +147,7 @@
             <div class="col-lg-6 m-auto">
                 <h1 class="h1">Nossos Serviços</h1>
                 <p>
-                    Xodó da Preta é uma marca autoral e inclusiva que produz acessórios e moda afro, com o propósito de vestir todos os corpos, todos os gêneros com representatividade, identidade e versatilidade., além de transmitir alegria através das estampas e cores. Prezamos pela sustentabilidade e economia circular. Marca idealizada e criada pela minha mãe Marli.
+                    A Xodó da Preta disponibiliza a criação e venda de moda e acessórios afro autorais e inclusivos, pensados para vestir todos os corpos e gêneros com representatividade, identidade e versatilidade. Como serviço fundamental, a marca garante a transmissão de alegria através das estampas e cores, e ainda se compromete com a sustentabilidade e a economia circular em sua produção.
                 </p>
             </div>
         </div>
