--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -141,14 +141,14 @@
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left align-self-center">
-                                <h1 class="h1 text-success"><b>Zay</b> eCommerce</h1>
-                                <h3 class="h2">Tiny and Perfect eCommerce Template</h3>
+                                <h1 class="h1 text-success"><b> </b> Xodo da Preta</h1>
+                                <h3 class="h2"> </h3>
                                 <p>
-                                    Zay Shop is an eCommerce HTML5 CSS template with latest version of Bootstrap 5 (beta 1). 
-                                    This template is 100% free provided by <a rel="sponsored" class="text-success" href="https://templatemo.com" target="_blank">TemplateMo</a> website. 
-                                    Image credits go to <a rel="sponsored" class="text-success" href="https://stories.freepik.com/" target="_blank">Freepik Stories</a>,
-                                    <a rel="sponsored" class="text-success" href="https://unsplash.com/" target="_blank">Unsplash</a> and
-                                    <a rel="sponsored" class="text-success" href="https://icons8.com/" target="_blank">Icons 8</a>.
+                                    Xodó da Preta é uma marca autoral e inclusiva que produz acessórios e moda afro, com o propósito de vestir todos os corpos, todos os gêneros com representatividade, identidade e versatilidade., além de transmitir alegria através das estampas e cores. Prezamos pela sustentabilidade e economia circular. Marca idealizada e criada pela minha mãe Marli.
+                                    <a rel="sponsored" class="text-success" href="https://templatemo.com" target="_blank"></a>  
+                                    <a rel="sponsored" class="text-success" href="https://stories.freepik.com/" target="_blank"> </a>,
+                                    <a rel="sponsored" class="text-success" href="https://unsplash.com/" target="_blank"> </a> 
+                                    <a rel="sponsored" class="text-success" href="https://icons8.com/" target="_blank"> </a>.
                                 </p>
                             </div>
                         </div>
@@ -163,11 +163,11 @@
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1">Proident occaecat</h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
+                                <h1 class="h1"> Autenticidade e Inclusão em Cada Estampa </h1>
+                                <h3 class="h2"> Identidade, Versatilidade e Representatividade </h3>
                                 <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
+                                    Nossa moda e acessórios afro são autorais e criados para vestir todos os corpos, todos os gêneros, transmitindo alegria com cores e estampas únicas. Reforçamos nossa essência com práticas de sustentabilidade e economia circular.
+                                     <strong></strong> 
                                 </p>
                             </div>
                         </div>
